--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^5.16.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^10.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
