--- a/public/Projects.json
+++ b/public/Projects.json
@@ -1,47 +1,65 @@
 [
     {
-        "_id": "1",
-        "image": "https://ibb.co/jR9NDDp",
-        "heading": "Project 1",
-        "sub_heading": "Project description goes here",
+        "image": "https://ibb.co/mN1qJWr",
+        "heading": "Dance Academy",
+        "sub_heading": "A full stack project of an e-learning platform.",
         "technologies": [
-            "React",
-            "JavaScript",
-            "HTML",
-            "CSS"
+            "  React",
+            "Tailwind",
+            " daisy Ui",
+            "React-dom",
+            "React-helmet-async",
+            "React-hook-form",
+            "React-icons",
+            "   React-query",
+            "React-router-dom",
+            "@tanstack/react-query",
+            " Axios",
+            " Firebase",
+            " Mongo DB",
+            " express Js",
+            "Stripe"
         ],
-        "liveLink": "https://www.example.com/project1",
-        "client": "https://github.com/username/project1-client",
-        "server": "https://github.com/username/project1-server"
+        "liveLink": "https://dance-academy-72a3f.web.app/",
+        "client": "https://github.com/RabeyaAkter78/dance-academy-client",
+        "server": "https://github.com/RabeyaAkter78/dance-academt-server"
     },
     {
-        "_id": "2",
-        "image": "path/to/image2.jpg",
+        "image": "https://ibb.co/z4bh2n1",
         "heading": "Project 2",
         "sub_heading": "Project description goes here",
         "technologies": [
-            "Angular",
-            "TypeScript",
-            "SCSS",
-            "Firebase"
+            "React",
+            " React Tab",
+            "React-fast-marquee",
+            "Tailwind",
+            " Daisy UI",
+            "Node JS",
+            "Express JS",
+            " Firebase",
+            "AOS animation",
+            "MongoDB"
         ],
-        "liveLink": "https://www.example.com/project2",
-        "client": "https://github.com/username/project2-client",
-        "server": "https://github.com/username/project2-server"
+        "liveLink": "https://kidolls-client.web.app/",
+        "client": "https://github.com/RabeyaAkter78/kidolls-client",
+        "server": "https://github.com/RabeyaAkter78/kidolls-server"
     },
     {
-        "_id": "3",
-        "image": "path/to/image3.jpg",
+        "image": "https://ibb.co/0czRBcY",
         "heading": "Project 3",
         "sub_heading": "Project description goes here",
         "technologies": [
-            "Vue",
-            "JavaScript",
-            "CSS",
-            "Node.js"
+            "React",
+            " Bootstrap",
+            "React-Bootstarp",
+            "React-lazy-load",
+            "react-to-pdf",
+            "React-icons",
+            "React-hot-toast",
+            " Firebase"
         ],
-        "liveLink": "https://www.example.com/project3",
-        "client": "https://github.com/username/project3-client",
-        "server": "https://github.com/username/project3-server"
+        "liveLink": "https://the-chefs-pantry-client.web.app/",
+        "client": "https://github.com/RabeyaAkter78/the-chefs-pantry-client",
+        "server": "https://github.com/RabeyaAkter78/the-chefs-pantry-server"
     }
 ]
