added project to the database

--- a/public/Projects.json
+++ b/public/Projects.json
@@ -1,62 +1,53 @@
 [
     {
-        "image": "https://ibb.co/mN1qJWr",
+        "image": "../src/assets/images/projects/danceAcademy/1.png",
         "heading": "Dance Academy",
         "sub_heading": "A full stack project of an e-learning platform.",
         "technologies": [
-            "  React",
-            "Tailwind",
-            " daisy Ui",
-            "React-dom",
-            "React-helmet-async",
-            "React-hook-form",
-            "React-icons",
-            "   React-query",
-            "React-router-dom",
-            "@tanstack/react-query",
+            "Javascript",
+            "React JS",
+            "Tailwind CSS",
             " Axios",
             " Firebase",
             " Mongo DB",
             " express Js",
-            "Stripe"
+            "Stripe JS"
         ],
         "liveLink": "https://dance-academy-72a3f.web.app/",
         "client": "https://github.com/RabeyaAkter78/dance-academy-client",
         "server": "https://github.com/RabeyaAkter78/dance-academt-server"
     },
     {
-        "image": "https://ibb.co/z4bh2n1",
-        "heading": "Project 2",
-        "sub_heading": "Project description goes here",
+        "image": "../src/assets/images/projects/danceAcademy/p2.png",
+        "heading": "Kidolls",
+        "sub_heading": "This is a virtual Toy store website",
         "technologies": [
-            "React",
-            " React Tab",
-            "React-fast-marquee",
-            "Tailwind",
-            " Daisy UI",
+            "Javascript",
+            "React JS",
+            "Tailwind CSS",
+            "MongoDB",
             "Node JS",
             "Express JS",
-            " Firebase",
-            "AOS animation",
-            "MongoDB"
+            "Firebase",
+            "AOS animation"
         ],
         "liveLink": "https://kidolls-client.web.app/",
         "client": "https://github.com/RabeyaAkter78/kidolls-client",
         "server": "https://github.com/RabeyaAkter78/kidolls-server"
     },
     {
-        "image": "https://ibb.co/0czRBcY",
-        "heading": "Project 3",
-        "sub_heading": "Project description goes here",
+        "image": "../src/assets/images/projects/danceAcademy/p-3 (1).png",
+        "heading": "The Chefs Pantry",
+        "sub_heading": "This is a specialized Chefs Pantry website",
         "technologies": [
-            "React",
-            " Bootstrap",
-            "React-Bootstarp",
-            "React-lazy-load",
-            "react-to-pdf",
-            "React-icons",
-            "React-hot-toast",
-            " Firebase"
+            "HTML",
+            "Javascript",
+            "Bootstrap",
+            "React JS",
+            "MongoDB",
+            "Node JS",
+            "Express JS",
+            "Firebase"
         ],
         "liveLink": "https://the-chefs-pantry-client.web.app/",
         "client": "https://github.com/RabeyaAkter78/the-chefs-pantry-client",
